Move to new Glossary terms: Campaign Layer, Job Type, instead of Campaign/CampaignDefinition

--- a/webservice/templates/actual_pending_files.html
+++ b/webservice/templates/actual_pending_files.html
@@ -37,7 +37,7 @@
 Pending files for:
 
      {% if campaign_id is not none %}
-        Campaign {{c.name}}
+        Campaign Layer {{c.name}}
      {% elif task_id is not none %}
        Submissions(s) {{jjid}}
      {% elif job_id is not none %}
