--- a/webservice/templates/campaign_definition_edit.html
+++ b/webservice/templates/campaign_definition_edit.html
@@ -18,13 +18,13 @@
 <div class="ui breadcrumb" style="margin-top: -45px;">
   <a href="{{pomspath}}/" class="section">Home</a>
   <div class="divider"> / </div>
-  <div class="section">Campaign Definitions</div>
+  <div class="section">Job Types</div>
 </div>
 {%endblock%}
 
 {%block header%}
 <h1 class="ui header">
-    Campaign Definitions {%include 'help_button.html'%}
+    Job Types {%include 'help_button.html'%}
 </h1>
 {%endblock%}
 
@@ -131,7 +131,7 @@
 <div class="ui modal" id="definition_add_edit_modal">
   <i class="close icon"></i>
   <h3 class="block header" id="ae_experiment">
-    Campaign Definition Editor SPUD
+    Job Type Editor SPUD
   </h3>
   <div class="ui hidden divider"></div>
   <div class="ui text container">
