--- a/webservice/templates/campaign_time_bars.html
+++ b/webservice/templates/campaign_time_bars.html
@@ -9,7 +9,7 @@
 <div class="ui breadcrumb" style="margin-top: -45px;">
   <a href="{{pomspath}}/" class="section">Home</a>
   <div class="divider"> / </div>
-  <div class="section"><a href="{{pomspath}}/show_campaigns">Campaigns</a></div>
+  <div class="section"><a href="{{pomspath}}/show_campaigns">Campaign Layers</a></div>
   <div class="divider"> / </div>
   <div class="section">{{name}}</div>
 </div>
