--- a/webservice/templates/search_tags.html
+++ b/webservice/templates/search_tags.html
@@ -23,7 +23,7 @@
          Tag Query Results {%include 'help_button.html'%}
                     
           <div class="sub header">
-              view all campaigns belonging to this tag
+              view all campaign Layers belonging to this Tag/Campaign
           </div>
 </h1>
 {%endblock%}
@@ -41,7 +41,7 @@
 <table class="ui sortable celled table">
   <thead>
     <tr>
-      <th class="">Campaign Name</th>
+      <th class="">Campaign Layer Name</th>
       <th class="">Experiment</th>
     </tr>
   </thead>
