--- a/webservice/templates/campaign_sheet.html
+++ b/webservice/templates/campaign_sheet.html
@@ -9,11 +9,11 @@
 <div class="ui breadcrumb" style="margin-top: -45px;">
   <a href="{{pomspath}}/" class="section">Home</a>
   <div class="divider"> / </div>
-  <a href="{{pomspath}}/show_campaigns/" class="section">Campaigns</a>
+  <a href="{{pomspath}}/show_campaigns/" class="section">Campaign Layers</a>
   <div class="divider"> / </div>
   <a href="{{pomspath}}/campaign_info?campaign_id={{campaign_id}}" class="section">{{name}}</a>
   <div class="divider"> / </div>
-  <div class="section">Campaign Sheet</div>
+  <div class="section">Campaign Layer Sheet</div>
 </div>
 {%endblock%}
 
