--- a/webservice/templates/inflight_files.html
+++ b/webservice/templates/inflight_files.html
@@ -32,7 +32,7 @@
 In-Flight files for:
 
      {% if campaign_id is not none %}
-        Campaign {{c.name}}
+        Campaign Layer {{c.name}}
      {% elif task_id is not none %}
        Submissions(s) {{jjid}}
      {% elif job_id is not none %}
