--- a/webservice/templates/kill_jobs_confirm.html
+++ b/webservice/templates/kill_jobs_confirm.html
@@ -33,7 +33,7 @@
 
    Are you sure you want to kill the jobs for 
      {% if campaign_id is not none %}
-        Campaign {{task.campaign_obj.name}}, Submission(s) {{jjil|join(', ')}}
+        Campaign Layer {{task.campaign_obj.name}}, Submission(s) {{jjil|join(', ')}}
      {% elif task_id is not none %}
        Submissions(s) {{jjil}}
      {% elif job_id is not none %}
