--- a/webservice/templates/triage_job.html
+++ b/webservice/templates/triage_job.html
@@ -8,9 +8,9 @@
 <div class="ui breadcrumb" style="margin-top: -45px;">
   <a href="{{pomspath}}/" class="section">Home</a>
   <div class="divider"> / </div>
-  <a href="{{pomspath}}/show_campaigns/" class="section">Campaigns</a>
+  <a href="{{pomspath}}/show_campaigns/" class="section">Campaign Layers</a>
   <div class="divider"> / </div>
-  <a href="{{pomspath}}/campaign_time_bars/campaign_id=?{{job_info.Campaign.campaign_id}}" class="section">Campaign {{job_info.Campaign.name}}</a>
+  <a href="{{pomspath}}/campaign_time_bars/campaign_id=?{{job_info.Campaign.campaign_id}}" class="section">Campaign_Layer {{job_info.Campaign.name}}</a>
   <div class="divider"> / </div>
   <a href="{{pomspath}}/show_task_jobs?task_id={{job_info.Job.task_id}}&tmin={{tmin}}" class="section">Jobs in Submission {{task_jobsub_jobid}}</a>
   <div class="divider"> / </div>
@@ -152,7 +152,7 @@
       </tr>
       
       <tr>
-        <td>Campaign</td>
+        <td>Campaign Layer</td>
         <td>
           <p>{{job_info.Campaign.name}}</p>
         </td>
@@ -164,7 +164,7 @@
         </td>
       </tr>
       <tr>
-        <td>Task Def Name</td>
+        <td>Job Type Name</td>
         <td>
           <p>{{job_info.CampaignDefinition.name}}</p>
         </td>
