active for experiment blah

--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -277,7 +277,7 @@ $( document ).ready(function() {
   </div>
 
      <div class="ui segment raised ">
-    <h3>Campaign Definition</h3>
+    <h3>Job Type</h3>
 
     <b>Name</b>: {{Campaign_definition_info.CampaignDefinition.name}}<br>
     <!--<b>experiment</b>: {{Campaign_definition_info.CampaignDefinition.experiment}}<br>-->
