--- a/webservice/templates/show_task_jobs.html
+++ b/webservice/templates/show_task_jobs.html
@@ -20,14 +20,14 @@
 
 {%block header%}
 <h1 class="ui header">
-     Task {{task_jobsub_id}} Jobs{%include 'help_button.html'%}
+     Submission {{task_jobsub_id}} Jobs{%include 'help_button.html'%}
 </h1>
 {%endblock%}
 
 
 
 {%block subheader%}
-<h2 class="ui dividing header">Task {{task_jobsub_id}} jobs:</h2>
+<h2 class="ui dividing header">Submission {{task_jobsub_id}} jobs:</h2>
 {%endblock%}
 
 
