--- a/webservice/templates/triage_job.html
+++ b/webservice/templates/triage_job.html
@@ -57,7 +57,7 @@
       <th>Node Name</th>
       <th>CPU</th>
       <th>Jobsub_Job_ID</th>
-      <th>Task ID</th>
+      <th>Submission ID</th>
       <th>Usr Exe Exit Code</th>
       <th>Updated</th>
     </tr>
@@ -170,7 +170,7 @@
         </td>
       </tr>
       <tr>
-        <td>Task Status</td>
+        <td>Submission Status</td>
         <td>
           <p>{{job_info.Task.status}}</p>
         </td>
