--- a/webservice/templates/job_table.html
+++ b/webservice/templates/job_table.html
@@ -111,7 +111,7 @@ $(function() {
     
     <div class="title">
         <i class="dropdown icon"></i>
-        Tasks
+        Submissions
     </div>
     
     <div class="content">
@@ -215,7 +215,7 @@ $(function() {
 
 <div class="ui checkbox" style="padding-bottom:5px;">
   <input type="checkbox" name="task_checkbox" {{filtered_fields.get("task_checkbox")}}>
-  <label style="color:white;"><b>Task</b></label>
+  <label style="color:white;"><b>Submission</b></label>
 </div>
 
 <br/>
@@ -278,7 +278,7 @@ $( "#search_button" ).click(function() {
         {% endif %}
       {% endfor %}
       <!-- span2 {{span2}} -->
-      {%if filtered_fields.get("task_checkbox") == 'checked'%}  <th class="" colspan="{{span2|length}}">Task fields</th>  {%endif%}
+      {%if filtered_fields.get("task_checkbox") == 'checked'%}  <th class="" colspan="{{span2|length}}">Submission fields</th>  {%endif%}
       {%set span3 = campcolumns|length %}
       {%if filtered_fields.get("campaign_checkbox") == 'checked'%}  <th class="" colspan="{{span3}}">Campaign layer fields</th>  {%endif%}
     </tr>
