don't do whole history of campaign for time bars

--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -221,13 +221,13 @@ $( document ).ready(function() {
 	       </a>
 	      </div>
 	      <div class=item>
-	       <a href="{{pomspath}}/campaign_sheet?campaign_id={{Campaign_info.Campaign.campaign_id}}&tmax={{tmaxs}}">
-		<i class="external table icon" data-content="Campaign Spreadsheet" data-variation="basic"></i>Day by Day Spreadsheet
+	       <a href="{{pomspath}}/campaign_sheet?campaign_id={{Campaign_info.Campaign.campaign_id}}&tdays=7">
+		<i class="external table icon" data-content="Campaign Spreadsheet" data-variation="basic"></i>Day by Day Spreadsheet (1wk)
 	       </a>
 	      </div>
 	      <div class=item>
-	      <a href="{{pomspath}}/campaign_time_bars?campaign_id={{Campaign_info.Campaign.campaign_id}}&tmin={{tmins}}&tmax={{tmaxs}}">
-		<i class="external tasks icon" data-content="Submissions for Campaign Time Bars" data-variation="basic"></i>Submission Time Bars
+	      <a href="{{pomspath}}/campaign_time_bars?campaign_id={{Campaign_info.Campaign.campaign_id}}&tdays=7">
+		<i class="external tasks icon" data-content="Submissions for Campaign Time Bars (1wk)" data-variation="basic"></i>Submission Time Bars (1wk)
 	      </a>
 	      </div>
 	      <div class=item>
