--- a/webservice/templates/show_dimension_files.html
+++ b/webservice/templates/show_dimension_files.html
@@ -35,7 +35,7 @@ Count: {{flist|length}}
 <div class="ui raised padded text container segment">
 <div class="ui list">
 {% for f in flist %}
-<div class="item"> {{f}}  <br>
+<div class="item"> <a href="https://samweb.fnal.gov:8483/sam/{{experiment}}/api/files/name/{{f}}/metadata">{{f}}</a>  <br>
 </div>
 {%endfor%}
 </div>
