--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -139,11 +139,15 @@ $( document ).ready(function() {
 
    <table class="ui celled table unstackable">
      <tr>
+      <th align="center">Total</th>
       <th colspan=3 align="center">Active Campaign Jobs </th>
       <th colspan=3 align="center">Jobs in {{time_range_string}}</th>
       <th colspan=2 align="center">Stats</th>
      </tr>
      <tr>
+        <th>All
+          <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Total_All"><i style="float: none" class="grey help circle link icon"></i></a>
+        </th>
         <th>Idle 
           <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a>
         </th>
