--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -63,6 +63,7 @@
        <th colspan=2 align="center"> Campaign Layer
         <a target="_help" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Campaign"><i style="float: none" class="grey help circle link icon"></i></a>
       </th>
+      <th>Total</th>
       <th colspan=3 align="center">Active Jobs </th>
       <th colspan=3 align="center">Jobs in {{time_range_string}}</th>
       <th colspan=2 align="center">Stats</th>
@@ -70,6 +71,7 @@
      <tr>
         <th>Experiment </th>
         <th>Name </th>
+        <th>All</th>
         <th>Idle 
           <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a>
         </th>
