--- a/webservice/templates/triage_job.html
+++ b/webservice/templates/triage_job.html
@@ -108,17 +108,19 @@
 {% set jobsub_job_id_digits = job_info.Job.jobsub_job_id.split('@')[0] %}
 
 
+<span style="display:inline-block; min-width: 6em; text-align: right">Size</span> &nbsp; Name <br/>
 
 {% for item in job_file_list %}
 
-{% if item.find(jobsub_job_id_digits) > -1 %}
-<mark> <a href="{{pomspath}}/job_file_contents?job_id={{job_id}}&task_id={{job_info.Job.task_id}}&tmin={{tmin}}&file={{item}}">{{ item }}</a> </mark>
-<br/>
+<span style="display:inline-block; min-width: 6em; text-align: right">{{item[2]}}</span> &nbsp;
+{% if item[5].find(jobsub_job_id_digits) > -1 %}
+<mark> 
+<a href="{{pomspath}}/job_file_contents?job_id={{job_id}}&task_id={{job_info.Job.task_id}}&tmin={{tmin}}&file={{item[5]}}">{{item[5]}}</a>
+</mark>
 {% else %}
-<a href="{{pomspath}}/job_file_contents?job_id={{job_id}}&task_id={{job_info.Job.task_id}}&tmin={{tmin}}&file={{item}}">{{ item }}</a>
-<br/>
+<a href="{{pomspath}}/job_file_contents?job_id={{job_id}}&task_id={{job_info.Job.task_id}}&tmin={{tmin}}&file={{item[5]}}">{{item[5]}}</a>
 {% endif %}
-
+<br/>
 
 {% endfor %}
 
