--- a/webservice/templates/job_file_contents.html
+++ b/webservice/templates/job_file_contents.html
@@ -54,12 +54,15 @@ line-height: 12px;
 </style>
 
 
-<div class="ui existing segment">
-<pre>
+<div style = "margin 1 em; border: 2px solid #C0C0C0; padding: 0 0.5em;">
+<pre style = "font-size: 90%; line-height: 80%;">
 {% for item in job_file_contents %}
 {{item}}
 {% endfor %}
 </pre>
 </div>
 
+<script type="text/javascript">
+.off("scroll")
+</script>
 {%endblock%}
