log errors better put back part of template change

--- a/webservice/templates/triage_job.html
+++ b/webservice/templates/triage_job.html
@@ -162,7 +162,7 @@
       <tr>
         <td>Command Executed</td>
         <td>
-          <p>{{job_info.Task.command_executed}}</p>
+          <pre>{{job_info.Task.command_executed}}</pre>
         </td>
       </tr>
       <tr>
