--- a/webservice/templates/job_file_contents.html
+++ b/webservice/templates/job_file_contents.html
@@ -53,9 +53,8 @@ line-height: 12px;
 }
 </style>
 
-
-<div style="margin 1 em; border: 2px solid #C0C0C0; padding: 0 0.5em;">
-<pre style="font-size: 90%; line-height: 80%;">
+<div class="ui existing segment">
+<pre>
 {% for item in job_file_contents %}
 {{item}}
 {% endfor %}
