--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -494,6 +494,7 @@ $( document ).ready(function() { $('#auth_info').dimmer({on: 'hover'}); });
 
 
                                 
+{%block final%} {%endblock%}
     </body>
     
 </html>
