--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -125,8 +125,8 @@
             <div class="item">
               <div class="header">Campaign Layers</div>
               <div class="menu">
-		{% if current_experimenter is defined %}
-                {%for e in current_experimenter.authorized_for.keys()%}
+		{% if current_experimenter is defined and current_experimenter.authorized_for %}
+                {% for e in current_experimenter.authorized_for.keys() %}
                 {%if e != 'root' and current_experimenter.authorized_for[e] %}
                 <a class="item" href="{{pomspath}}/show_campaigns?experiment={{e}}">
                   Active for {{e}}
@@ -256,7 +256,7 @@
             <div class="item">
               <div class="header">Campaign Layers</div>
               <div class="menu">
-		{% if current_experimenter is defined %}
+		{% if current_experimenter is defined and current_experimenter.authorized_for %}
                 {%for e in current_experimenter.authorized_for.keys()%}
                 {%if e != 'root' and current_experimenter.authorized_for[e] %}
                 <a class="item" href="{{pomspath}}/show_campaigns?experiment={{e}}">
