tyring to give a link by idle jobs to fifemon why arent my jobs runging

--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -204,7 +204,7 @@ $( document ).ready(function() {
                     {{counts[c.campaign_id][k]}}
                   </a>
                   {{if k == "idle"}}
-                    <a href="https://fifemon.fnal.gov/monitor/dashboard/db/why-isnt-my-job-running?var-user={%experiment%}pro"> </a>
+                    <a href="https://fifemon.fnal.gov/monitor/dashboard/db/why-isnt-my-job-running?var-user={%experiment%}pro">(why?)</a>
                   {{endif}}
                  </td>
                {%endif%}
