--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -203,8 +203,9 @@ $( document ).ready(function() {
                   <a href="{{pomspath}}/job_table?campaign_id={{c.campaign_id}}&job_status={{k}}&tmin={{tmins}}&tmax={{tmaxs}}&tdays={{tdays}}">
                     {{counts[c.campaign_id][k]}}
                   </a>
-                  {%if k == "idle"%}
-                    <a href="https://fifemon.fnal.gov/monitor/dashboard/db/why-isnt-my-job-running?var-user={{experiment}}pro">(why?)</a>
+                  {%if k == "Idle"%}
+                    &nbsp; &nbsp;
+                    <a href="https://fifemon.fnal.gov/monitor/dashboard/db/why-isnt-my-job-running?var-user={{Campaign_info.Campaign.experiment}}pro"><i class="grey link treatment icon"></i></a>
                   {%endif%}
                  </td>
                {%endif%}
