--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -157,7 +157,10 @@ $( document ).ready(function() {
         <th>Held
           <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a>
         </th>
-        <th>Completed
+        <th>Total Completed
+          <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a>
+        </th>
+        <th>Not Located
           <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a>
         </th>
         <th>Located
