--- a/webservice/templates/campaign_edit.html
+++ b/webservice/templates/campaign_edit.html
@@ -69,9 +69,11 @@
 	<th>Name</th>
         <th>Active</th>
 	<th>VO Role</th>
-	<th>Software Version</th>
+	<th>Software <br>Version</th>
 	<th>Dataset</th>
         <th>Split Type</th>
+        <th>Completion <br>Type</th>
+        <th>Completion <br>Percent</th>
 	<th>Parameter Overrides</th>
 	<th>Depends On</th>
       </tr>
@@ -97,6 +99,8 @@
 	<td id="c_software_version_{{loop.index}}">{{row.software_version}}</td>
 	<td id="c_dataset_{{loop.index}}">{{row.dataset}}</td>
 	<td id="c_split_type_{{loop.index}}">{{row.cs_split_type}}</td>
+	<td id="c_completion_type_{{loop.index}}">{{row.completion_type}}</td>
+	<td id="c_completion_pct_{{loop.index}}">{{row.completion_pct}}</td>
 	<td id="c_param_overrides_{{loop.index}}">{{row.param_overrides|replace("None","")}}</td>
         <td id="c_depends_{{loop.index}}">
 	  {% for key, value in data.depends.iteritems() %}
@@ -180,6 +184,7 @@
 	</div>
       </div>
 
+
       <div class="two fields">
 	<div class="field">
           <label>Dataset</label>
@@ -190,12 +195,31 @@
           <input type="text" id="ae_split_type" name="ae_split_type">
 	</div>
       </div>
+
+<! -- New -->
+      <div class="two fields">
+	<div class="field">
+	  <label>Completion Type</label>
+	  <select class="ui dropdown" name="ae_completion_type" id="ae_completion_type">
+	    <option value="True" id="comp">Located</option>
+	    <option value="False" >Not Located</option>
+	  </select>
+	</div>
+
+	<div class="field">
+          <label>Completion pct</label>
+          <input type="text" id="ae_completion_pct" name="ae_completion_pct">
+	</div>
+      </div>
+<! -- Done New -->
+
       <div class="one field">
 	<div class="field">
           <label>Parameter Overrides<i class="large edit link blue icon" id="edit_param_modal_btn"></i></label>
           <textarea rows="2" id="ae_param_overrides_text" disabled>[]</textarea>
 	</div>
       </div>
+
       <div class="one field">
 	<div class="field">
           <label>Depends On<i class="large edit link blue icon" id="edit_depends_modal_btn"></i></label>
@@ -361,6 +385,8 @@ $('#campaign_add_edit_form')
       ae_active :                 'empty',
       ae_vo_role :                'empty',
       ae_software_version :       'empty',
+      ae_completion_type :        'empty',
+      ae_completion_pct  :        'empty',
       ae_dataset :                'empty',
       ae_split_type :             'empty',
       ae_launch_id :              'empty',
@@ -614,11 +640,13 @@ function edit_campaign(index,clone) {
     $("#ae_depends").val( '{"campaigns": [], "file_patterns": []}' );  
     $("#ae_depends_text").val( '{"campaigns": [], "file_patterns": []}' );  
   }
-  $("#ae_experiment").text("Campaign Layer Editor  ({{ data.curr_experiment if data.curr_experiment is defined}})");
+  $("#ae_experiment").text("Campaign Layer Editor ({{ data.curr_experiment if data.curr_experiment is defined}})");
   $("#ae_active").val( $("#c_active_"+index).text() ).trigger('change');
   $("#ae_vo_role").val( $("#c_vo_role_"+index).text() );
   $("#ae_software_version").val( $("#c_software_version_"+index).text() );
   $("#ae_dataset").val( $("#c_dataset_"+index).text() );
+  $("#ae_completion_type").val($("#c_completion_type_"+index).text() ).trigger('change');
+  $("#ae_completion_pct").val( $("#c_completion_pct_"+index).text() );
   $("#ae_split_type").val( $("#c_split_type_"+index).text() );
   $("#ae_param_overrides_text").val( $("#c_param_overrides_"+index).text() );
   $("#ae_param_overrides").val( $("#c_param_overrides_"+index).text() );
