--- a/webservice/templates/campaign_edit.html
+++ b/webservice/templates/campaign_edit.html
@@ -69,11 +69,11 @@
 	<th>Name</th>
         <th>Active</th>
 	<th>VO Role</th>
-	<th>Software <br>Version</th>
+	<th>Software Version</th>
 	<th>Dataset</th>
         <th>Split Type</th>
-        <th>Completion <br>Type</th>
-        <th>Completion <br>Percent</th>
+        <th>Completion Type</th>
+        <th>Completion Percent</th>
 	<th>Parameter Overrides</th>
 	<th>Depends On</th>
       </tr>
@@ -195,11 +195,13 @@
           <input type="text" id="ae_split_type" name="ae_split_type">
 	</div>
       </div>
+
+<! -- New -->
       <div class="two fields">
 	<div class="field">
 	  <label>Completion Type</label>
 	  <select class="ui dropdown" name="ae_completion_type" id="ae_completion_type">
-	    <option value="located">Located</option>
+	    <option value="located" id="comp">Located</option>
 	    <option value="complete" >Complete</option>
 	  </select>
 	</div>
@@ -209,6 +211,7 @@
           <input type="text" id="ae_completion_pct" name="ae_completion_pct">
 	</div>
       </div>
+<! -- Done New -->
 
       <div class="one field">
 	<div class="field">
@@ -383,14 +386,14 @@ $('#campaign_add_edit_form')
       ae_vo_role :                'empty',
       ae_software_version :       'empty',
       ae_dataset :                'empty',
-      ae_completion_type :        'empty',
-      ae_completion_pct :         'empty',
       ae_split_type :             'empty',
       ae_launch_id :              'empty',
       ae_campaign_definition_id : 'empty'
     }
   })
 ;
+//      ae_completion_type :        'empty',
+//      ae_completion_pct  :        'empty',
 
 $("#c_experiment").change(function() {
     $("#campaign_form").submit();
@@ -642,8 +645,6 @@ function edit_campaign(index,clone) {
   $("#ae_vo_role").val( $("#c_vo_role_"+index).text() );
   $("#ae_software_version").val( $("#c_software_version_"+index).text() );
   $("#ae_dataset").val( $("#c_dataset_"+index).text() );
-  $("#ae_completion_type").val($("#c_completion_type_"+index).text() ).trigger('change');
-  $("#ae_completion_pct").val( $("#c_completion_pct_"+index).text() );
   $("#ae_split_type").val( $("#c_split_type_"+index).text() );
   $("#ae_param_overrides_text").val( $("#c_param_overrides_"+index).text() );
   $("#ae_param_overrides").val( $("#c_param_overrides_"+index).text() );
@@ -652,6 +653,9 @@ function edit_campaign(index,clone) {
   // Trigger the change function which will load associated fields
   $("#ae_campaign_definition_id").trigger('change');
   $("#ae_launch_id").trigger('change');
+  //
+  $("#ae_completion_type").val($("#c_completion_type_"+index).text() ).trigger('change');
+  $("#ae_completion_pct").val( $("#c_completion_pct_"+index).text() );
 
   $("#campaign_add_edit_modal").modal('show');
 }
