--- a/webservice/templates/campaign_edit.html
+++ b/webservice/templates/campaign_edit.html
@@ -69,11 +69,11 @@
 	<th>Name</th>
         <th>Active</th>
 	<th>VO Role</th>
-	<th>Software Version</th>
+	<th>Software<br>Version</th>
 	<th>Dataset</th>
         <th>Split Type</th>
-        <th>Completion Type</th>
-        <th>Completion Percent</th>
+        <th>Completion<br>Type</th>
+        <th>Completion<br>Percent</th>
 	<th>Parameter Overrides</th>
 	<th>Depends On</th>
       </tr>
@@ -196,7 +196,6 @@
 	</div>
       </div>
 
-<! -- New -->
       <div class="two fields">
 	<div class="field">
 	  <label>Completion Type</label>
@@ -211,7 +210,6 @@
           <input type="text" id="ae_completion_pct" name="ae_completion_pct">
 	</div>
       </div>
-<! -- Done New -->
 
       <div class="one field">
 	<div class="field">
