--- a/webservice/templates/campaign_edit.html
+++ b/webservice/templates/campaign_edit.html
@@ -200,7 +200,7 @@
 	<div class="field">
 	  <label>Completion Type</label>
 	  <select class="ui dropdown" name="ae_completion_type" id="ae_completion_type">
-	    <option value="located" id="comp">Located</option>
+	    <option value="located" >Located</option>
 	    <option value="complete" >Complete</option>
 	  </select>
 	</div>
