--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -391,7 +391,7 @@ $( "#sign_out" ).click(function() {
 
 
 
-                    <div class="main ui intro __container">
+                    <div class="main ui intro container">
 
                         {%block subheader%} {%endblock%}
 
