--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -31,17 +31,42 @@
 
 
 {%block subheader%}
-<h2 class="ui dividing header">{{In}}Active Campaign Layers <!--for {{time_range_string}}-->
-       {%if limit_experiment %}
-           for {{limit_experiment}}
-       {%endif%}
-</h2>
-<a href="{{prev}}">&lt;previous {{days}} days</a> | 
-<a href="{{next}}">next {{days}} days &gt;</a>
+<!--
+    <h2 class="ui dividing header">{{In}}Active Campaign Layers <!--for {{time_range_string}} - ->
+           {%if limit_experiment %}
+               for {{limit_experiment}}
+           {%endif%}
+    </h2>
+    -->
+    <!-- <div class="ui two column doubling stackable grid container"> -->
+    <div class="ui grid container">
+        <h2 class="ui __dividing header">{{In}}Active Campaign Layers<!--for {{time_range_string}} -->
+               {%if limit_experiment %}
+                   for {{limit_experiment}}
+               {%endif%}
+        </h2>
+        <form method="POST" class="ui form">
+            <select class="ui inline __search dropdown" multiple="multiple" name="exp_selected">
+                <option value="">Experiments</option>
+                {# for c in cl if not c.experiment_obj.restricted or current_experimenter.is_authorized(c.experiment) #}
+                {% for e in experiments %}
+                    <!-- e: "{{e}}" "{{e.4}}" -->
+                    <option value="{{e.0}}" {{'selected' if e.4 or e.0 in current_experimenter.extra.selected }}>{{e.0}}</option>
+                {% endfor %}
+            </select>
+<!--
+            <div class="ui compact inline __primary submit button">Save</div>
+-->
+            <input type="submit" value="Update" class="ui inline mini compact __teal button" />
+        </form>
+    </div>
+    <br>
+    <a href="{{prev}}">&lt;previous {{days}} days</a> |
+    <a href="{{next}}">next {{days}} days &gt;</a>
 
-<div class="ui basic label">
-  <i class="wait icon"></i>  <div class="tmin" style="display:inline;"></div> to <div class="tmax" style="display:inline;"></div>
-</div>
+    <div class="ui basic label">
+      <i class="wait icon"></i>  <div class="tmin" style="display:inline;"></div> to <div class="tmax" style="display:inline;"></div>
+    </div>
 
 {%endblock%}
 
@@ -49,10 +74,20 @@
 
 
 {%block content%}
-
+<style>
+    /* Patch for semantic ui dropdown to make it horizontally aligned */
+    .ui.selection.dropdown {
+        line-height: 2em;
+    }
+</style>
 <!--
  {{counts}}
  {{counts_keys}}
+ current_experimenter: {{current_experimenter}}
+ authorized_for: {{current_experimenter.authorized_for}}
+ extra: {{current_experimenter.extra}}
+ experiments: {{experiments}}
+ dbg: {{dbg}}
 -->
 
   <div class="ui">
@@ -72,7 +107,7 @@
         <th>Experiment </th>
         <th>Name </th>
         <th>All</th>
-        <th>Idle 
+        <th>Idle
           <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a>
         </th>
         <th>Running
@@ -90,7 +125,7 @@
         <th>Removed
           <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a>
         </th>
-        <th>%Efficiency 
+        <th>%Efficiency
           <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a>
         </th>
         <th>Pending
@@ -98,10 +133,15 @@
         </th>
      </tr>
 
-     {% for c in cl %}
+     {# for c in cl if not c.experiment_obj.restricted or current_experimenter.is_authorized(c.experiment) #}
+     {# for c in cl if not c.experiment_obj.restricted or c.experiment in current_experimenter.extra.selected #}
+     {% for c in cl if c.experiment in current_experimenter.extra.selected %}
      {% set outer_loop = loop %}
             <tr>
             <td>{{c.experiment}}</td>
+            <!-- c.experiment_obj.restricted: {{c.experiment_obj.restricted}} -->
+            <!-- current_experimenter.is_authorized(c.experiment): {{current_experimenter.is_authorized(c.experiment)}} -->
+            <!-- c.experiment in current_experimenter.extra.selected {{c.experiment in current_experimenter.extra.selected}}-->
             <td> <a href="{{pomspath}}/campaign_info?campaign_id={{c.campaign_id}}">{{c.name}}</a></td>
             {% for k in counts_keys[c.campaign_id] %}
               {% if k == "efficiency" %}
