Bug fixes: fixed newline in submit field.

--- a/webservice/templates/campaign_definition_edit.html
+++ b/webservice/templates/campaign_definition_edit.html
@@ -131,7 +131,7 @@
 <div class="ui modal" id="definition_add_edit_modal">
   <i class="close icon"></i>
   <h3 class="block header" id="ae_experiment">
-    Job Type Editor SPUD
+    Job Type Editor
   </h3>
   <div class="ui hidden divider"></div>
   <div class="ui text container">
@@ -169,7 +169,7 @@
       <div class="one field">
 	<div class="field">
            <label>Recovery Launches <i class="large edit link blue icon" id="edit_recovery_modal_btn"></i></label>
-          <textarea id="ae_definition_recovery_text" disabled></textarea>
+          <textarea id="ae_definition_recovery_text" disabled>[]</textarea>
         </div>
       </div>
       <div class="actions">
