--- a/webservice/templates/launch_template_edit.html
+++ b/webservice/templates/launch_template_edit.html
@@ -58,18 +58,19 @@
       <tr>
 	<td class="collapsing">
           {% if data.authorized==True %}
-	  <i class="large edit link blue icon"  onclick="edit_template('{{row.LaunchTemplate.launch_id}}','{{row.LaunchTemplate.name}}','{{row.LaunchTemplate.launch_host}}','{{row.LaunchTemplate.launch_account}}','{{row.LaunchTemplate.launch_setup|e}}');"></i>
-	  <i class="large copy link blue icon"  onclick="edit_template('{{row.LaunchTemplate.launch_id}}','{{row.LaunchTemplate.name}}','{{row.LaunchTemplate.launch_host}}','{{row.LaunchTemplate.launch_account}}','{{row.LaunchTemplate.launch_setup|e}}','CLONE');"></i>
+	  <i class="large edit link blue icon"  onclick="edit_template({{loop.index}});"></i>
+	  <i class="large copy link blue icon"  onclick="edit_template({{loop.index}},'CLONE');"></i>
 	  <i class="large trash link blue icon" onclick="delete_template('{{row.LaunchTemplate.name}}'); "></i>
 	  {% else %}
 	  <i class="disabled large edit link blue icon">
 	  <i class="disabled large trash link blue icon">
 	  {% endif %}
         </td>
-	<td>{{row.LaunchTemplate.name}}</td>
-	<td>{{row.LaunchTemplate.launch_host}}</td>
-	<td>{{row.LaunchTemplate.launch_account}}</td>
-	<td>{{row.LaunchTemplate.launch_setup|e}}</td>
+	<td id="ldf_launch_id_{{loop.index}}" style="display:none;">{{row.LaunchTemplate.launch_id}}</td>
+	<td id="ldf_name_{{loop.index}}">{{row.LaunchTemplate.name}}</td>
+	<td id="ldf_launch_host_{{loop.index}}">{{row.LaunchTemplate.launch_host}}</td>
+	<td id="ldf_launch_account_{{loop.index}}">{{row.LaunchTemplate.launch_account}}</td>
+	<td id="ldf_launch_setup_{{loop.index}}">{{row.LaunchTemplate.launch_setup|e}}</td>
       </tr>
       {% endfor %}
     </tbody>
@@ -185,7 +186,12 @@ $("#experiment").change(function() {
     }).modal('show');
   }
 
-  function edit_template(launch_id, name, launch_host, launch_account, launch_setup, clone) {
+  function edit_template(index, clone) {
+    launch_id = $("#ldf_launch_id_"+index).text()
+    name = $("#ldf_name_"+index).text()
+    launch_host = $("#ldf_launch_host_"+index).text()
+    launch_account = $("#ldf_launch_account_"+index).text()
+    launch_setup = $("#ldf_launch_setup_"+index).text()
     if (typeof clone === 'undefined') {
       $("#ae_launch_action").val("edit");
       $("#ae_launch_name").val(name)
